--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -1,7 +1,12 @@
 {% extends 'base.html' %}
 {% block content %}
+<nav>
+	<ul>
+		<li><a href="/new">New story</a></li>
+	</ul>
+</nav>
 	<div class="container">
-		<h2>My stories</h2>
+		<h2>My upcoming stories</h2>
 		<div class="row">
 			<div class="three columns by-day">
 				<p>Tuesday</p>
@@ -16,19 +21,6 @@
 						<br />
 						<a href="#">Preview: mojo.com/preview/article/1</a>
 					</li>
-					<li>Team-oriented local hardware
-						<span class="meta">
-							<span class="label writer">CA</span>
-							<span class="label editor">JF</span>
-						</span>
-						<br />
-					</li>
-					<li>Another Republican does something even stupider
-						<span class="meta">
-							<span class="label writer-editor">CA</span>
-						</span>
-						<br />
-					</li>
 				</ul>
 			</div>
 		</div>
@@ -39,21 +31,6 @@
 			<ul id="wednesdayStories" class="storySet">
 				<li>Virtual optimal product</li>
 				<li>Focused actuating hub</li>
-				<li>Republican senator does something stupid
-						<span class="meta">
-							<span class="label writer">CA</span>
-							<span class="label editor">JF</span>
-						</span>
-						<br />
-						<a href="#">Preview: mojo.com/preview/article/1</a>
-				</li>
-				<li>Story about mole people that live in huts
-						<span class="meta">
-							<span class="label writer-editor">JF</span>
-						</span>
-						<br />
-						<a href="#">Preview: mojo.com/preview/article/1</a>
-				</li>
 			</ul>
 		</div>
 	</div>
