Adding iconography and fleshing out workflow

--- a/templates/upcoming.html
+++ b/templates/upcoming.html
@@ -6,15 +6,21 @@
 			<div class="three columns by-day">
 				<p>Tuesday</p>
 			</div>
-			<div class="thirteen columns">
-				<ul id="tuesdayStories" class="storySet">
-					<li><a href="/edit">Object-based coherent knowledge user</a>
-						<span class="meta">
+				<ul id="tuesdayStories" class="storySet thirteen columns">
+					<li class="row">
+						<div class="one column">
+							<a href="/ready_for_publish" class="icon-button"><i class="batch large" data-icon="&#xF023;"></i>
+						</div>
+						<div class="nine columns">
+						<a href="/edit">Object-based coherent knowledge user</a>
+						<br />
+						<a href="/preview">Preview: mojo.com/preview/article/1</a>
+						</div>
+
+						<div class="two columns">
 							<span class="label writer">CA</span>
 							<span class="label editor">JF</span>
-						</span>
-						<br />
-						<a href="#">Preview: mojo.com/preview/article/1</a>
+						</div>
 					</li>
 					<li>Team-oriented local hardware
 						<span class="meta">
@@ -31,7 +37,6 @@
 					</li>
 				</ul>
 				<button>(+) Add new story</button>
-			</div>
 		</div>
 		<div class="three columns by-day">
 			<p>Wednesday</p>
@@ -62,3 +67,4 @@
 
 
 {% endblock %}
+<i class="batch large" data-icon="&#xF090;"></i>
