--- a/static/stylesheets/esphand.css
+++ b/static/stylesheets/esphand.css
@@ -1,3 +1,34 @@
+/* # Utility: Icons 
+================================================== */
+/* Example:
+ * <a href="#"><i class="batch" data-icon="&#xF000;"></i> Join the Conversation</a>
+ */
+
+@font-face{
+  font-family:"Batch";
+  src:url('../fonts/batch-icons-webfont.eot');
+  src:url('../fonts/batch-icons-webfont.eot?#iefix') format('embedded-opentype'),
+    url('../fonts/batch-icons-webfont.woff') format('woff'),
+    url('../fonts/batch-icons-webfont.ttf') format('truetype'),
+    url('../fonts/batch-icons-webfont.svg#batchregular') format('svg');
+  font-weight:normal;
+  font-style:normal;
+}
+.batch {
+  font-family:"Batch"; /*or whatever you've decalred your font name as*/
+  font-size:16px;
+  line-height:1;
+  display:inline-block;
+}
+
+.batch:before {
+    content:attr(data-icon);
+}
+
+.batch.large { font-size:32px; }
+.batch.huge { font-size:64px; }
+.batch.natural { font-size:inherit; }
+
 /* # Dashboard 
 ================================================== */
 
@@ -17,8 +48,14 @@
     padding: 0.5em;
     border: 1px dashed #dedede;
 }
-span.meta {
-    float: right;
+.icon-button {
+	display: inline-block;
+	padding: 5px;
+}
+.icon-button:hover {
+	background-color: green;
+	color: white;
+	border-radius: 8px;
 }
 span.label {
     max-width: 2em;
