--- a/static/stylesheets/esphand.css
+++ b/static/stylesheets/esphand.css
@@ -32,17 +32,11 @@
 /* # Dashboard 
 ================================================== */
 
-.three.by-day {
-    background-color: honeydew;
+.upcoming-stories .edited {
+    background-color: #BFF1AA;
 }
-.storySet {
-    min-height: 3em;
-    margin: 0;
-}
-.storySet li{
-    border: 1px solid #dedede;
-    background: white;
-    padding: 1em;
+.upcoming-stories li{
+	padding: 1em 0;
 }
 .storySet li.addStory {
     padding: 0.5em;
@@ -89,3 +83,59 @@ input.editStory {
 }
 .editStory.title { font-size: 3em; }
 .editStory.dek { font-size: 2em; }
+
+/* # Section queue arrangement 
+================================================== */
+
+.gridster li {
+    /* box-shadow: 0 0 6px grey; */
+    list-style: none;
+}
+
+.gridster, .content, .gridster2 {
+	background-color: #ddd;
+    width: 940px;
+    margin: 0 auto;
+
+    opacity: .8;
+
+    -webkit-transition: opacity .6s;
+    -moz-transition: opacity .6s;
+    -o-transition: opacity .6s;
+    -ms-transition: opacity .6s;
+    transition: opacity .6s;
+}
+
+.content {
+    color: white;
+}
+
+.content p {
+    margin: 25px;
+}
+
+.gridster .gs_w, .gridster2 .gs_w {
+    background: #FFF;
+    cursor: pointer;
+    -webkit-box-shadow: 0 0 5px rgba(0,0,0,0.3);
+    box-shadow: 0 0 5px rgba(0,0,0,0.3);
+}
+
+.gridster .player, .gridster2 .player {
+    -webkit-box-shadow: 3px 3px 5px rgba(0,0,0,0.3);
+    box-shadow: 3px 3px 5px rgba(0,0,0,0.3);
+}
+
+
+.gridster .gs_w.try, .gridster2 .gs_w.try {
+    background-image: url(../img/sprite.png);
+    background-repeat: no-repeat;
+    background-position: 37px -169px;
+
+}
+
+.gridster .preview-holder, .gridster2 .preview-holder {
+    border: none!important;
+    border-radius: 0!important;
+    background: rgba(255,255,255,.2)!important;
+}
