Added a menu. Don't know where to put it yet!

--- a/static/stylesheets/esphand.css
+++ b/static/stylesheets/esphand.css
@@ -70,6 +70,9 @@ span.writer-editor {
 
 /* # Edit a story
 ================================================== */
+#add_story_elements {
+	
+}
 
 .timeline .revision {
     float:left;
