--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -4,7 +4,8 @@
 <nav>
 	<p>Logged in as <em>{{ username }}</em></p>
 	<ul>
-		<li><a href="/new">New story</a></li>
+		<li><a href="/new"><i class="batch large" data-icon="&#xF10B;"></i> New story</a></li>
+		<li><a href="/new"><i class="batch large" data-icon="&#xF13E;"></i> Import from Word</a></li>
 	</ul>
 </nav>
 		<h2>Upcoming stories</h2>
@@ -18,8 +19,9 @@
 					<a href="#" class="two columns">Preview</a>
 			</li>
 			<li class="row edited">
-					<a href="/edit" class="six columns">Team-oriented reciprocal leverage on enhance B2C infrastructures</a>
-					<a href="#" class="two columns">Preview</a>
+				
+				<a href="/edit" class="six columns"><i class="batch" data-icon="&#xF0C2;"></i> Team-oriented reciprocal leverage on enhance B2C infrastructures</a>
+				<a href="#" class="two columns">Preview</a>
 			</li>
 			<li class="row">
 					<a href="/edit" class="six columns">Right-sized content-based approach with repurpose extensible e-services</a>
