--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -1,39 +1,30 @@
 {% extends 'base.html' %}
 {% block content %}
 	<div class="container">
-<nav>
+<nav id="dashboard_nav">
 	<p>Logged in as <em>{{ username }}</em></p>
 	<ul>
 		<li><a href="/new"><i class="batch large" data-icon="&#xF10B;"></i> New story</a></li>
-		<li><a href="/new"><i class="batch large" data-icon="&#xF13E;"></i> Import from Word</a></li>
+		<li><a href="/import"><i class="batch large" data-icon="&#xF13E;"></i> Import from Word</a></li>
+		<li><a href="/logout"><i class="batch large" data-icon="&#xF069;"></i>Log out</a></li>
 	</ul>
 </nav>
+	<div class="eight columns">
 		<h2>Upcoming stories</h2>
 		<ul class="upcoming-stories">
-			<li class="row edited">
-					<a href="/edit" class="six columns">Object-based coherent knowledge user</a>
-					<a href="#" class="two columns">Preview</a>
+			{% for story in upcoming_stories %}
+			<li class="row {{ 'edited' if 'revision_ids' in story }}">
+				<a href="/story/{{ loop.index - 1 }}/edit" class="six columns alpha">
+					{% if story['locked'] == True %}<i class="batch" data-icon="&#xF0C2;"></i>{% endif %}
+					{{ story['title'] }}
+				</a>
+				<a href="#" class="one column">Preview</a>
+				<button type="button" class="one column omega" title="Copy preview link to clipboard"><i class="batch" data-icon="&#xF143;"></i></button>
 			</li>
-			<li class="row edited">
-					<a href="/edit" class="six columns">Multi-tiered high-level structure for deploy wireless systems</a>
-					<a href="#" class="two columns">Preview</a>
-			</li>
-			<li class="row edited">
-				
-				<a href="/edit" class="six columns"><i class="batch" data-icon="&#xF0C2;"></i> Team-oriented reciprocal leverage on enhance B2C infrastructures</a>
-				<a href="#" class="two columns">Preview</a>
-			</li>
-			<li class="row">
-					<a href="/edit" class="six columns">Right-sized content-based approach with repurpose extensible e-services</a>
-					<a href="#" class="two columns">Preview</a>
-			</li>
-			<li class="row">
-					<a href="/edit" class="six columns">Profound incremental throughput by productize dot-com vortals</a>
-					<a href="#" class="two columns">Preview</a>
-			</li>
+			{% endfor %}
 		</ul>
 		<a href="/upcoming-stories">Actually you have (12) more...</a>
-
+	</div>
 		<br class="clear" />
 		<h2>Published stories</h2>
 		<ul>
