--- a/templates/dashboard_for_editor.html
+++ b/templates/dashboard_for_editor.html
@@ -4,16 +4,14 @@
 	<nav id="dashboard_nav">
 		<p>Logged in as <em>{{ username }}</em></p>
 		<ul>
-			<li><a href="/new"><i class="batch large" data-icon="&#xF10B;"></i> New story</a></li>
-			<li><a href="/import"><i class="batch large" data-icon="&#xF13E;"></i> Import from Word</a></li>
 			<li><a href="/logout"><i class="batch large" data-icon="&#xF069;"></i>Log out</a></li>
 		</ul>
 	</nav>
 	<div class="eight columns">
-		<h2>Upcoming stories</h2>
-		<ul class="upcoming-stories">
+		<h2>Stories assigned to you</h2>
+		<ul class="editable-stories">
 			{% for story in upcoming_stories %}
-			<li class="row {{ 'edited' if story['revision_ids']|length }}">
+			<li class="row {{ 'unedited' if story['revision_ids']|length }}">
 				<a href="/story/{{ loop.index - 1 }}/edit" class="six columns alpha">
 					{% if story['locked'] == True %}<i class="batch" data-icon="&#xF0C2;"></i>{% endif %}
 					{{ story['title'] }}
@@ -26,7 +24,7 @@
 		<a href="/upcoming-stories">Actually you have (12) more...</a>
 	</div>
 		<br class="clear" />
-		<h2>Published stories</h2>
+		<h2>Unassigned stories</h2>
 		<ul>
 			<li class="row">
 					<a href="/edit" class="six columns">Public-key 24 hour collaboration for engineer back-end e-commerce</a>
@@ -44,8 +42,9 @@
 					<a href="/edit" class="six columns">Front-line multi-state hub for extend wireless technologies</a>
 			</li>
 		</ul>
-		<a href="/past-stories">Actually you have (147) more...</a>
-	</div>
+		<a href="/past-stories">There are (147) more...</a>
+
+</div>
 
 
 {% endblock %}
