--- a/templates/new_article.html
+++ b/templates/new_article.html
@@ -26,12 +26,12 @@
 {% endif %}
 
 <form action="{{ action|default("/new") }}" method="post" class="article">
-	<input type="text" name="title" placeholder="title" spellcheck="true" value="{{ story['title']|default('') }}" />
+	<input type="text" name="title" placeholder="title" spellcheck="true" value="{{ story['title'] }}" />
 	<textarea name="content" spellcheck="true" rows="10">{{ story['content'] }}</textarea>
 	{% if not story['locked'] %}
 		<input type="submit" value="Save" />
 
-		{% if role == 'writer' %}
+		{% if role == 'writer' and story['revision_ids']|length %}
 		{{ send_to_editor() }} 
 		{% endif %}
 
