--- a/templates/dashboard_for_editor.html
+++ b/templates/dashboard_for_editor.html
@@ -1,4 +1,7 @@
 {% extends 'base.html' %}
+{% block menu %}
+				<li>&nbsp;</li>
+{% endblock %} 
 {% block content %}
 <div class="ink-grid">
 	<div class="column-group">
