--- a/templates/dashboard_for_writer.html
+++ b/templates/dashboard_for_writer.html
@@ -1,4 +1,8 @@
 {% extends 'base.html' %}
+{% block menu %}
+				<li><a href="/new"><i class="fa fa-file"></i> New story</a></li>
+				<li><a href="/import"><i class="fa fa-upload"></i> Import from Word</a></li>
+{% endblock %}
 {% block content %}
 <div class="ink-grid">
 	<div class="column-group gutters">
