--- a/templates/dashboard_for_editor.html
+++ b/templates/dashboard_for_editor.html
@@ -12,52 +12,43 @@
 				<li class="{{ 'unedited' if story['revision_ids']|length }}">
 				<div class="story_overview">
 					<a href="/story/{{ loop.index - 1 }}/edit">
-						{% if story['locked'] == True %}<i class="fa fa-lock fa-lg"></i>{% endif %}
+						{% if story['locked'] == True %}
+						<i class="fa fa-lg fa-lock locked"></i>
+						{% endif %}
 						{{ story['title'] }}
 					</a>
+					<menu>
+						<a href="/story/{{ loop.index - 1 }}/preview" class="space">Preview</a>
+						<a href="#" class="space">{{ story['comments'] }} Comments</a>
+					</menu>
 				</div>
-				<!-- a href="#"><span class="disclosure-triangle">&#x25B6;</span> Edit titles</a>
-				<div class="story_metadata">
-					<form>
-						<label for="story_hed">Hed</label>
-						<input type="text" name="story_hed" />
-						<label for="story_dek">Dek</label>
-						<input type="text" name="story_dek" />
-						<label for="story_hed">Alt. Hed</label>
-						<input type="text" name="story_alt_hed" />
-						<label for="story_hed">Alt. Dek</label>
-						<input type="text" name="story_alt_hed" />
-						<label for="story_hed">Social Hed</label>
-						<input type="text" name="story_social_hed" />
-						<label for="story_social_dek">Social Dek</label>
-						<input type="text" name="story_social_dek" />
-					</form>
-				</div -->
 			</li>
 			{% endfor %}
 			</ul>
-		<a href="/upcoming-stories">Actually you have (12) more...</a>
+			<a href="/upcoming-stories">Actually you have (12) more...</a>
+		</div>
+		<div class="all-50 small-100 tiny-100">
+			<h2>Unassigned stories</h2>
+			<ul>
+				<li class="row">
+						<a href="/edit" class="six columns">Public-key 24 hour collaboration for engineer back-end e-commerce</a>
+				</li>
+				<li class="row">
+						<a href="/edit" class="six columns">Persistent actuating concept on engage ubiquitous e-services</a>
+				</li>
+				<li class="row">
+						<a href="/edit" class="six columns">Adaptive reciprocal model for redefine B2B metrics</a>
+				</li>
+				<li class="row">
+						<a href="/edit" class="six columns">Universal stable knowledge user with disintermediate holistic functionalities</a>
+				</li>
+				<li class="row">
+						<a href="/edit" class="six columns">Front-line multi-state hub for extend wireless technologies</a>
+				</li>
+			</ul>
+			<a href="/past-stories">There are (147) more...</a>
 		</div>
 	</div>
-		<h2>Unassigned stories</h2>
-		<ul>
-			<li class="row">
-					<a href="/edit" class="six columns">Public-key 24 hour collaboration for engineer back-end e-commerce</a>
-			</li>
-			<li class="row">
-					<a href="/edit" class="six columns">Persistent actuating concept on engage ubiquitous e-services</a>
-			</li>
-			<li class="row">
-					<a href="/edit" class="six columns">Adaptive reciprocal model for redefine B2B metrics</a>
-			</li>
-			<li class="row">
-					<a href="/edit" class="six columns">Universal stable knowledge user with disintermediate holistic functionalities</a>
-			</li>
-			<li class="row">
-					<a href="/edit" class="six columns">Front-line multi-state hub for extend wireless technologies</a>
-			</li>
-		</ul>
-		<a href="/past-stories">There are (147) more...</a>
 
 </div>
 
