--- a/templates/new_article.html
+++ b/templates/new_article.html
@@ -59,19 +59,19 @@
 				{% endif %}
 
 				<div class="all-10">
-					<input type="submit" value="Save" {{ 'class="push-right"' if story['revision_ids']|length }} />
+					<input type="submit" value="Save" class="push-right" />
 				</div>
 			</div>
 			{% endif %}
 		</form>
 		{% if show_comments %}
+		{#
 		<aside class="all-25 comments">
-			{# No idea what this would be, semantically speaking. #}
 			<div class="comment">Some comment about how the story blah blah</div>
 			<div class="comment">Some comment about how the story blah blah</div>
 			<div class="comment">Some comment about how the story blah blah</div>
 			<div class="comment">Some comment about how the story blah blah</div>
-		</aside>
+		</aside> #}
 		{% endif %}
 	</div>
 </div>
